--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,7 +1041,7 @@ section {
 }
 
 .counts .image {
-  background: url("../img/carprotect.jpg") center center no-repeat;
+  background: url("../img/cattleprotect.png") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
